# rust_web

./: Cargo.toml
usersa/: Cargo.toml
usersa/src/: main.rs
usersd/: Cargo.toml  Rocket.toml  test.db
usersd/migrations/2022-08-24-184440_schema/: up.sql
usersd/src/: main.rs
